# shopify-square-connect

./: .gitignore  README.md  main.py  pyproject.toml  quickstart.py
src/shopify-square-connect/: shopify_connect.py  square_connect.py
