[project]
name = "shopify-square-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dotenv>=0.9.9", "squareup>=41.0.0.20250319"]

[project.scripts]
format = "ruff format"
lint = "ruff lint --fix"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
 "ruff>=0.11.2",
]
